# MediaElch

./: .editorconfig  .travis.yml  MediaElch.pro  meson.build
src/log/: CMakeLists.txt
src/movies/: MovieController.cpp
src/scrapers/: CMakeLists.txt
src/scrapers/image/: TMDbImages.cpp
src/scrapers/movie/: IMDB.cpp  IMDB.h  MovieScraper.h
src/scrapers/movie/adultdvdempire/: AdultDvdEmpire.cpp  CMakeLists.txt
src/scrapers/movie/aebn/: AEBN.cpp  CMakeLists.txt
src/scrapers/movie/custom/: CustomMovieScraper.cpp  CustomMovieScraper.h
src/scrapers/movie/hotmovies/: CMakeLists.txt  HotMovies.cpp
src/scrapers/movie/imdb/: CMakeLists.txt  ImdbMovieScraper.cpp  ImdbMovieSearchJob.cpp
src/scrapers/movie/ofdb/: CMakeLists.txt  OFDb.cpp
src/scrapers/movie/tmdb/: CMakeLists.txt
src/scrapers/movie/videobuster/: CMakeLists.txt  VideoBuster.cpp
src/scrapers/tv_show/thetvdb/: TheTvDbApi.cpp  TheTvDbApi.h  TheTvDbShowSearchJob.cpp
src/ui/imports/: ImportDialog.cpp  MakeMkvDialog.cpp
src/ui/movies/: MovieMultiScrapeDialog.cpp  MovieSearchWidget.cpp  MovieWidget.cpp
test/scrapers/: testAdultDvdEmpire.cpp  testIMDb.cpp  testScraperHelpers.cpp  testTmdbMovie.cpp  testVideoBuster.cpp
test/scrapers/thetvdb/: testTheTvDbHelper.cpp  testTheTvDbSearch.cpp
travis-ci/: configure.sh  install_dependencies.sh
